[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/SuperChart/SuperChart.gd" type="Script" id=1]
[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/SuperChartXLabel/SuperChartXLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/SuperChartGrid/SuperChartGrid.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/SuperChartYLabel/SuperChartYLabel.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/LineTitle/LineTitle.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/DrunkBull.SuperChart/src/main/WindowViewData/WindowViewData.tscn" type="PackedScene" id=6]

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("ViewportYLabel")

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.513726, 0.513726, 0.513726, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("ViewportXLabel")

[node name="SuperChart" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ViewportXLabel" type="Viewport" parent="."]
usage = 0
render_target_v_flip = true

[node name="SuperChartXLabel" parent="ViewportXLabel" instance=ExtResource( 2 )]

[node name="ViewportYLabel" type="Viewport" parent="."]
usage = 0
render_target_v_flip = true

[node name="SuperChartYLabel" parent="ViewportYLabel" instance=ExtResource( 4 )]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )
msaa = 2
usage = 0
render_target_v_flip = true

[node name="SuperChartGrid" parent="Viewport" instance=ExtResource( 3 )]

[node name="DataLines" type="Node2D" parent="Viewport"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContainerYLabel" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 488.0
rect_min_size = Vector2( 100, 0 )
rect_clip_content = true
__meta__ = {
"_editor_description_": ""
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ContainerYLabel"]
margin_right = 100.0
margin_bottom = 488.0
texture = SubResource( 3 )
expand = true

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 488.0
custom_styles/separator = SubResource( 1 )

[node name="ContainerChart" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 1024.0
margin_bottom = 488.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/ContainerChart"]
margin_right = 912.0
margin_bottom = 488.0
texture = SubResource( 2 )
expand = true

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 492.0
margin_right = 1024.0
margin_bottom = 496.0
custom_styles/separator = SubResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 500.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="ContainerLineTitle" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 0 )

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/ContainerLineTitle"]
margin_right = 100.0
margin_bottom = 100.0

[node name="ListLineTitle" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/ContainerLineTitle/ScrollContainer"]
margin_right = 100.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineTitle" parent="VBoxContainer/HBoxContainer2/ContainerLineTitle/ScrollContainer/ListLineTitle" instance=ExtResource( 5 )]

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer2"]
margin_left = 104.0
margin_right = 108.0
margin_bottom = 100.0
custom_styles/separator = SubResource( 1 )

[node name="ContainerXLabel" type="MarginContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 112.0
margin_right = 1024.0
margin_bottom = 100.0
rect_clip_content = true
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2/ContainerXLabel"]
margin_right = 912.0
margin_bottom = 100.0
texture = SubResource( 4 )
expand = true

[node name="WindowViewData" parent="." instance=ExtResource( 6 )]

[connection signal="resized" from="VBoxContainer/HBoxContainer/ContainerYLabel" to="." method="_on_ContainerYLabel_resized"]
[connection signal="resized" from="VBoxContainer/HBoxContainer/ContainerChart" to="." method="_on_ContainerChart_resized"]
[connection signal="resized" from="VBoxContainer/HBoxContainer2/ContainerXLabel" to="." method="_on_ContainerXLabel_resized"]
[connection signal="popup_hide" from="WindowViewData" to="." method="_on_WindowViewData_popup_hide"]
